<resources>
    <string name="app_name">StarWars</string>
    <string name="search_screen">search screen</string>
    <string name="favorite_characters">favorite characters</string>
    <string name="name">Name:</string>
    <string name="height">Height:</string>
    <string name="mass">Mass:</string>
    <string name="hair_color">Hair Color:</string>
    <string name="skin_color">Skin Color:</string>
    <string name="eye_color">Eye Color:</string>
    <string name="birth_year">Birth Year:</string>
    <string name="gender">Gender:</string>
    <string name="home_world">Home World:</string>
    <string name="films">Films:</string>
    <string name="species">Species:</string>
    <string name="vehicles">Vehicles:</string>
    <string name="starships">Starships:</string>
    <string name="created">Created:</string>
    <string name="edited">Edited:</string>
    <string name="url">Url:</string>
    <string name="add_remove_favorite">add/remove favorite</string>
</resources>